Removed empty lines and slight refactoring